--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <meta charset="utf-8">
     <title>HTML+CSS</title>
-    <link rel="stylesheet" href="CSS/css.css">
+    <link rel="stylesheet" href="CSS/index.css">
   </head>
   <body>
   <div class="S">
